--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "frontend",
+  "name": "kkanizaj.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://kkanizaj.github.io/kkanizaj.github.io",
   "dependencies": {
     "http-proxy-middleware": "^0.19.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
   },
+  "devDependencies": {
+    "gh-pages": "^1.0.0",
+    "react-scripts": "1.0.7"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
