--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kkanizaj.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://kkanizaj.github.io/kkanizaj.github.io",
+  "homepage": "https://kkanizaj.github.io/kkanizaj.github.io",
   "dependencies": {
     "http-proxy-middleware": "^0.19.0",
     "react": "^16.5.2",
@@ -10,8 +10,7 @@
     "react-scripts": "2.0.5"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0",
-    "react-scripts": "1.0.7"
+    "gh-pages": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
